Add GNU_SOURCE to meson

--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,7 @@ wresource_dir = join_paths(share_dir, 'wf-panel-pi')
 metadata_dir = join_paths(wresource_dir, 'metadata')
 
 add_project_arguments('-DPACKAGE_LOCALE_DIR="' + share_dir + '/locale"', language : [ 'c', 'cpp' ])
+add_project_arguments('-D_GNU_SOURCE', language : [ 'c', 'cpp' ])
 
 subdir('src')
 subdir('po')
