--- a/.gitignore
+++ b/.gitignore
@@ -6,27 +6,6 @@
 *.lo
 .dirstamp
 .DS_Store
-Makefile
-Makefile.in
-config.status
-config.log
 .deps/
 .libs/
-libtool
-autom4te.cache/*
-m4/*
-aclocal.m4
-ar-lib
-compile
-config.guess
-config.h
-config.h.in~
-config.sub
-configure
-depcomp
-install-sh
-ltmain.sh
-missing
-POTFILES
-stamp-*
-
+po/LINGUAS
