--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,26 @@
-Source: lxplug-cputemp
+Source: pplug-cputemp
 Section: x11
 Priority: optional
 Maintainer: Simon Long <simon@raspberrypi.com>
 Build-Depends:
- debhelper (>= 9), dh-autoreconf, intltool, libgtk-3-dev (>= 3.24),
- libiw-dev [linux-any], libmenu-cache-dev | libmenu-cache1-dev,
- lxpanel-dev (>= 0.10.1-1+rpt1)
-Homepage: http://raspberrypi.org/
+ debhelper-compat (= 13), meson,
+ libgtk-3-dev (>= 3.24), libgtkmm-3.0-dev (>= 3.24),
+ lxpanel-dev (>= 0.10.1-2+rpt21), wf-panel-pi-dev (>=0.92),
+ libgtk-layer-shell-dev (>= 0.6.0), libglm-dev
+Standards-Version: 4.5.1
+Homepage: http://raspberrypi.com/
 
 Package: lxplug-cputemp
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, lxmenu-data, libgtk-3-0 (>= 3.24),
- lxpanel (>= 0.10.1-1+rpt1), lxpanel-data (>= 0.10.1-1+rpt1), raspi-config
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ lxpanel (>= 0.10.1-2+rpt21), lxpanel-data (>= 0.10.1-2+rpt21)
 Description: CPU temperature plugin for lxpanel
  Plugin for lxpanel to show graph of CPU temperature.
+
+Package: wfplug-cputemp
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends},
+  wf-panel-pi (>=0.92)
+Description: CPU temperature plugin for wf-panel-pi
+ Plugin for wf-panel-pi to show graph of CPU temperature.
+
